plugins { id 'application' }

group = 'io.surfworks.snakeburger'
version = '0.0.1-SNAPSHOT'

repositories { mavenCentral() }

dependencies { implementation project(':snakeburger-core') }

application {
    mainClass = 'io.surfworks.snakeburger.cli.SnakeBurgerMain'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.code'])
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--add-modules', 'jdk.incubator.code']
}
